@@ -8,6 +8,8 @@ In grammar.y, added emitfuncint() function that takes a function plus an
    integer, and emits one followed by the other -- this is a very common
    operation. Fixed so everything that could now uses the new function.
 Added arc and wedge commands.
+Added shape interface. shinit, shend, shdone, shline, shcurve, shcubic.
+Added cool14.bas demo -- inspired by inkscape's polygon tool.
 ----------------------------------------------------------------------------
 David Ashley (DA) Wed Jun 25 21:40:30 EDT 2008
 dashxdr@gmail.com
